--- a/src/global.scss
+++ b/src/global.scss
@@ -10,17 +10,35 @@
  */
 
 /* Core CSS required for Ionic components to work properly */
-@import "~@ionic/angular/css/core.css";
+@import '~@ionic/angular/css/core.css';
 
 /* Basic CSS for apps built with Ionic */
-@import "~@ionic/angular/css/normalize.css";
-@import "~@ionic/angular/css/structure.css";
-@import "~@ionic/angular/css/typography.css";
+@import '~@ionic/angular/css/normalize.css';
+@import '~@ionic/angular/css/structure.css';
+@import '~@ionic/angular/css/typography.css';
 @import '~@ionic/angular/css/display.css';
 
 /* Optional CSS utils that can be commented out */
-@import "~@ionic/angular/css/padding.css";
-@import "~@ionic/angular/css/float-elements.css";
-@import "~@ionic/angular/css/text-alignment.css";
-@import "~@ionic/angular/css/text-transformation.css";
-@import "~@ionic/angular/css/flex-utils.css";
+@import '~@ionic/angular/css/padding.css';
+@import '~@ionic/angular/css/float-elements.css';
+@import '~@ionic/angular/css/text-alignment.css';
+@import '~@ionic/angular/css/text-transformation.css';
+@import '~@ionic/angular/css/flex-utils.css';
+
+:root {
+  --ion-color-slack: #c440c0;
+  --ion-color-slack-rgb: 196, 64, 192;
+  --ion-color-slack-contrast: #ffffff;
+  --ion-color-slack-contrast-rgb: 255, 255, 255;
+  --ion-color-slack-shade: #ac38a9;
+  --ion-color-slack-tint: #ca53c6;
+}
+
+.ion-color-slack {
+  --ion-color-base: var(--ion-color-slack);
+  --ion-color-base-rgb: var(--ion-color-slack-rgb);
+  --ion-color-contrast: var(--ion-color-slack-contrast);
+  --ion-color-contrast-rgb: var(--ion-color-slack-contrast-rgb);
+  --ion-color-shade: var(--ion-color-slack-shade);
+  --ion-color-tint: var(--ion-color-slack-tint);
+}
