--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,15 +2,30 @@
   <ion-split-pane contentId="main-content">
     <ion-menu contentId="main-content" type="overlay">
       <ion-content>
-        <ion-list id="inbox-list">
-          <ion-list-header>Boothby</ion-list-header>
-          <ion-note>426f6f74686279</ion-note>
+        <ion-list id="side_menu">
+          <ion-menu-toggle auto-hide="false">
+            <ion-item
+              *ngIf="authService.currentTokenValue"
+              id="user-header"
+              routerDirection="root"
+              routerLink="profile"
+              lines="none"
+            >
+              <ion-avatar slot="start">
+                <img src="{{ authService.currentUserValue.avatarUrl }}" />
+              </ion-avatar>
+              <ion-label>{{
+                authService.currentUserValue.firstname
+              }}</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
 
           <ion-menu-toggle
             auto-hide="false"
             *ngFor="let p of appPages; let i = index"
           >
             <ion-item
+              *ngIf="!p.connected || authService.currentTokenValue"
               (click)="selectedIndex = i"
               routerDirection="root"
               [routerLink]="[p.url]"
@@ -26,17 +41,30 @@
               <ion-label>{{ p.title }}</ion-label>
             </ion-item>
           </ion-menu-toggle>
-          <ion-menu-toggle id="login_button" auto-hide="false">
+
+          <ion-menu-toggle id="bottom_buttons" auto-hide="false">
             <ion-item
+              *ngIf="!authService.currentTokenValue"
               (click)="selectedIndex = -1"
               routerDirection="root"
-              routerLink="/login"
+              href="{{ loginLink }}"
               lines="none"
               detail="false"
               [class.selected]="selectedIndex == -1"
             >
-              <ion-icon slot="start" name="lock-closed"></ion-icon>
-              <ion-label>Espace de gestion</ion-label>
+              <ion-icon slot="start" name="person-circle"></ion-icon>
+              <ion-label>Se connecter</ion-label>
+            </ion-item>
+            <ion-item
+              button
+              *ngIf="authService.currentTokenValue"
+              (click)="logout()"
+              lines="none"
+              detail="false"
+              [class.selected]="selectedIndex == -1"
+            >
+              <ion-icon slot="start" name="log-out"></ion-icon>
+              <ion-label>Se déconnecter</ion-label>
             </ion-item>
           </ion-menu-toggle>
         </ion-list>
