--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -118,6 +118,14 @@ ion-item.selected {
   --color: var(--ion-color-primary);
 }
 
+ion-menu.md ion-list-header {
+  padding-left: 18px;
+  padding-right: 18px;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  font-weight: 450;
+}
+
 #side_menu {
   padding-top: 0;
   height: 100%;
