Add dialog lines

--- a/src/app/pages/dialogs/edit-dialog/edit-dialog.page.html
+++ b/src/app/pages/dialogs/edit-dialog/edit-dialog.page.html
@@ -15,6 +15,12 @@
         <ion-label position="stacked">Nom</ion-label>
         <ion-input formControlName="name" required></ion-input>
       </ion-item>
+      <ion-item
+        routerDirection="forward"
+        routerLink="/dialogs/{{dialog.id}}/lines"
+        detail
+        >Lignes de dialogue</ion-item
+      >
     </ion-list>
   </form>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
