--- a/src/app/pages/dialogs/list-dialogs/list-dialogs.page.html
+++ b/src/app/pages/dialogs/list-dialogs/list-dialogs.page.html
@@ -13,9 +13,10 @@
   </ion-refresher>
   <ion-list>
     <ion-item
-      *ngFor="let d of dialogs; let i = index"
+      *ngFor="let d of dialogs"
       routerDirection="forward"
       routerLink="/dialogs/{{d.id}}"
+      detail
       >{{ d.name }}</ion-item
     >
   </ion-list>
